syntax = "proto3";
package com.vang;
option java_package = "com.vang.folder_service.grpc.generated";
option java_multiple_files = true;
option java_outer_classname = "FileClientGrpc";

service DeleteFilesByFolderId {
  rpc deleteFiles(DeleteFilesByFolderIdRequest) returns (DeleteFilesByFolderIdReply);
}

service UpdateStatusFiles {
  rpc updateStatus(UpdateStatusFilesRequest) returns (UpdateStatusFilesReply);
}

message DeleteFilesByFolderIdRequest {
  string folderId = 1;
  string userId = 2;
}

message DeleteFilesByFolderIdReply {
  int32 rowChange = 1;
}

message UpdateStatusFilesRequest {
  int32 status = 1;
  string folderId = 2;
  string userId = 3;
}

message UpdateStatusFilesReply {
  int32 rowChange = 1;
}